# detscat

./: .gitignore  CMakeLists.txt  README.md
include/: config.h  config_parser.h  ddscat.h  detscat.h  detscat_config.h  detscat_config_parser.h  detscat_particles.h  mymath.h  particles.h  strutil.h  util.h
resources/: detscat.cfg  input.txt
src/: config_parser.c  ddscat.c  detscat.c  detscat_config.c  detscat_particles.c  main.c  mymath.c  particles.c  strutil.c  util.c
